[package]
name = "lindellcore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="lindellcore"
crate-type = ["staticlib"]

[dependencies]
libc="0.2.140"
multi-party-ecdsa = { git = "https://github.com/louisliu2048/multi-party-ecdsa", default-features = false, branch = "xiong/lindell" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
curv-kzen = { version = "0.9", default-features = false, features = ["rust-gmp-kzen"] }
base64 = "0.13.1"

[dependencies.paillier]
version = "0.4.2"
package = "kzen-paillier"
default-features = false
